start pir-sensor on system startup

--- a/etc/init/pir-sensor.conf
+++ b/etc/init/pir-sensor.conf
@@ -1,8 +1,7 @@
-# autossh tunnel startup Script
-
 description "PIR sensor"
+author "Ken Chou <kenchou77@gmail.com>"
 
-manual
+start on startup
 stop on shutdown
 
 respawn
