update work path. fix no more event on pir-delay-off

--- a/etc/init/pir-sensor.conf
+++ b/etc/init/pir-sensor.conf
@@ -1,11 +1,10 @@
 description "PIR sensor"
 author "Ken Chou <kenchou77@gmail.com>"
 
-start on startup
+start on local-filesystems
 stop on shutdown
 
 respawn
 
-exec /home/pi/pir-video-capture/pir/pir.py
+exec /home/pi/pir-video-capture/bin/pir.py
 
-# post-stop exec stop video-capture
