--- a/etc/init/video-capture.conf
+++ b/etc/init/video-capture.conf
@@ -4,10 +4,8 @@ author "Ken Chou <kenchou77@gmail.com>"
 start on pir-on
 stop on pir-delay-off or stopping video-stream or stopped pir-sensor
 
-# task
 
-env DEFAULTFILE=/etc/default/motion
-env STREAM=http://127.0.0.1:8554
+env DEFAULTFILE=/etc/default/video-capture
 
 pre-start script
     echo "`date` Starting Video Capture"
@@ -16,15 +14,16 @@ pre-start script
         . "$DEFAULTFILE"
     fi
 
-    echo "$start_motion_daemon @@@@ $DEFAULTFILE"
+    echo "enable=$enable in file $DEFAULTFILE"
 
     # stop job from continuing if admin has not enabled service in config file.
-    [ "x$start_motion_daemon" != xno ] || { echo "start_motion_daemon=$start_motion_daemon" ;stop; exit 0; }
+    [ "x$enable" = xyes ] || { stop; exit 0; }
 
-    status video-stream | grep running || { stop; exit 0;}
+    status video-stream | grep running || { echo "video-stream is not running";stop; exit 0;}
 end script
 
 script
+    STREAM=http://$USERNAME:$PASSWORD@127.0.0.1:8554
     FILENAME=$(date +"%Y%m%dT%H%M%S").avi
     exec sudo -u pi cvlc $STREAM --sout file/ts:/home/pi/pir-video-capture/data/$FILENAME
 end script
