--- a/etc/init/video-stream.conf
+++ b/etc/init/video-stream.conf
@@ -1,4 +1,4 @@
-description "picam video stream"
+description "video stream"
 author "Ken Chou <kenchou77@gmail.com>"
 
 start on (net-device-up IFACE=eth0)
@@ -6,5 +6,13 @@ stop on shutdown
 
 respawn
 
-exec raspivid -n -ex auto -t 0 -fps 25 -b 1000000 -w 1024 -h 576 -o - | cvlc stream:///dev/stdin --sout '#standard{access=http,mux=ts,dst=:8554}' :demux=h264 
+env DEFAULTFILE=/etc/default/video-capture
+
+script
+    if [ -f "$DEFAULTFILE" ]; then
+        . "$DEFAULTFILE"
+    fi
+
+    exec sudo -u pi /home/pi/pir-video-capture/bin/video-stream.sh "user=$USERNAME,pwd=$PASSWORD" 
+end script
 
